--- a/index.html
+++ b/index.html
@@ -1,36 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Samuel's Wordle</title>
-    <script src="js/main.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    <div id="container">
-        <div id="game">
-            <header>
-                <h1 class="title">SAMUEL'S WORDLE</h1>
-            </header>
-
-            <div id="board-container">
-               <div id="board"></div>
-            </div>
-
-            <div id="keyboard-container">
-                <div class="keyboard-row">
-                    <button data-key="q">q</button>
-                </div>
-            </div>
-l
-        </div>
-    </div>
-    
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,7 +7,10 @@ l
     <title>Samuel's Wordle</title>
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/styles.css">
-</head>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 <body>
     <div id="container">
         <div id="game">
