delete button is now functional

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                     <button data-key="b">b</button>
                     <button data-key="n">n</button>
                     <button data-key="m">m</button>
-                    <button data-key="del" class="wide-button">Del</button>
+                    <button data-key="del" class="wide-button" id="delete">Del</button>
+
                 </div>
             </div>
         </div>
