reload button added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <div id="game">
             <header>
                 <h1 class="title">SAMUEL'S WORDLE</h1>
+                    <button id="reloadButton" class="reload-icon">🔄</button>
+                </button>
             </header>
 
             <div id="board-container">
@@ -68,4 +70,3 @@
 </html>
 
 
-<!--Board was set up-->
