--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
         <div id="game">
             <header>
                 <h1 class="title">SAMUEL'S WORDLE</h1>
+                <button id="word">?</button>
                     <button id="reloadButton" class="reload-icon">🔄</button>
                 </button>
+                
+                
             </header>
+            <div id="divi"></div>
 
             <div id="board-container">
                <div id="board"></div>
@@ -60,7 +64,6 @@
                     <button data-key="n">n</button>
                     <button data-key="m">m</button>
                     <button data-key="del" class="wide-button" id="delete">Del</button>
-
                 </div>
             </div>
         </div>
