--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="game">
             <header>
                 <h1 class="title">SAMUEL'S WORDLE</h1>
-                <button id="word">?</button>
+                <button id="word">Give up</button>
                     <button id="reloadButton" class="reload-icon">🔄</button>
                 </button>
                 
@@ -68,6 +68,7 @@
             </div>
         </div>
     </div>
+    <img src="/Users/ximenabecerril/wordle_clone/wordle/desert2.jpg" alt="desert">
     
 </body>
 </html>
